--- a/index.html
+++ b/index.html
@@ -6,7 +6,49 @@
          background-image: linear-gradient(rgb(240, 150, 223), rgb(255, 255, 255), rgb(240, 150, 223));
          min-width: 100%;
          min-height: 100%;
-      }      
+         }
+         
+         .bn632-hover {
+  width: 160px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  margin: 20px;
+  height: 55px;
+  text-align:center;
+  border: none;
+  background-size: 300% 100%;
+  border-radius: 50px;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.bn632-hover:hover {
+  background-position: 100% 0;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.bn632-hover:focus {
+  outline: none;
+}
+
+.bn632-hover.bn27 {
+  background-image: linear-gradient(
+    to right,
+    #ed6ea0,
+    #ec8c69,
+    #f7186a,
+    #fbb03b
+  );
+  box-shadow: 0 4px 15px 0 rgba(236, 116, 149, 0.75);
+}
+         
   </style>
 </head>
 
@@ -33,6 +75,13 @@ And talk about amazing GIFs!!!
 <h3>
 (nom nom)
 </h3>
+
+
+<h2>
+Click to learn more about rats!!
+</h2>
+
+<a href="https://en.wikipedia.org/wiki/Rat"><button class="bn632-hover bn27">Rats</button></a>
 
 </body>
 
