--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ And talk about amazing GIFs!!!
 <h2>
 Click to learn more about rats!!
 </h2>
+<marquee>click it</marquee>
 
 <a href="https://en.wikipedia.org/wiki/Rat"><button class="bn632-hover bn27">Rats</button></a>
 
